--- a/charts/konnectivity/values.yaml
+++ b/charts/konnectivity/values.yaml
@@ -2,9 +2,11 @@
 applications:
 
   konnectivityServer:
+    enable: true
+    external: true 
 
     Deployment:
-      replicas: 3
+      replicas: 1
 
       metadata:
         labels: {}
