--- a/charts/addons/charts/kube-state-metrics/templates/service.yaml
+++ b/charts/addons/charts/kube-state-metrics/templates/service.yaml
@@ -2,13 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/component: exporter
     app.kubernetes.io/name: kube-state-metrics
-    app.kubernetes.io/version: 2.4.2
-  name: kube-state-metrics
+  name: kube-state-metrics-svc
 
 spec:
-  clusterIP: None
+  type: ClusterIP
   ports:
   - name: http-metrics
     port: 8080
