--- a/charts/addons/charts/metric-server/templates/Deployment.yaml
+++ b/charts/addons/charts/metric-server/templates/Deployment.yaml
@@ -39,6 +39,7 @@ spec:
           - --tls-cert-file=/pki/kubeconfig/tls.crt
           - --tls-private-key-file=/pki/kubeconfig/tls.key
           - --client-ca-file=/pki/kubeconfig/ca.crt
+          - --requestheader-client-ca-file=/pki/kubeconfig/ca.crt
           - --secure-port=4443
           - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
           - --kubelet-use-node-status-port
