--- a/charts/addons/charts/metric-server/templates/Service.yaml
+++ b/charts/addons/charts/metric-server/templates/Service.yaml
@@ -3,9 +3,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: metric-server-svc
+  labels:
+    app: metric-server
 spec:
   ports:
   - name: https
     port: 443
     protocol: TCP
     targetPort: https
+  selector:
+    app: metric-server
