--- a/charts/kube-apiserver/values.yaml
+++ b/charts/kube-apiserver/values.yaml
@@ -1,6 +1,12 @@
 ---
 applications:
-
+  konnectivityServer:
+    enable: true
+    external: true
+    mode: "http-connect"
+  proxyServer:
+    enable: true
+    
   kubeApiserver:
 
     extraParams:
