--- a/.helmignore
+++ b/.helmignore
@@ -23,11 +23,14 @@
 .vscode/
 charts/main
 charts/kube-controller-manager/templates/service.yaml
-charts/addons/charts/metric-server
+#charts/addons/charts/metric-server
 charts/addons/charts/konnectivity-client
-charts/addons/charts/kube-state-metrics
+#charts/addons/charts/kube-state-metrics
 #charts/kubeadm
 #charts/konnectivity
-charts/addons/charts/prometheus-adapter
+#charts/addons/charts/prometheus-adapter
 charts/addons/charts/cilium
-charts/addons/charts/victoriaMetrics
+#charts/addons/charts/victoriaMetrics
+charts/addons/charts/monitoring-client
+
+charts/addons/charts/dns
