--- a/charts/addons/charts/konnectivity-client/client/konnectivity-agent.yaml
+++ b/charts/addons/charts/konnectivity-client/client/konnectivity-agent.yaml
@@ -6,7 +6,7 @@ metadata:
     addonmanager.kubernetes.io/mode: Reconcile
     k8s-app: konnectivity-agent
 
-  namespace: kube-system
+  namespace: terra-system
   name: konnectivity-agent
 spec:
   replicas: 1
@@ -44,7 +44,7 @@ spec:
         - --logtostderr=true
         - --ca-cert=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         - --service-account-token-path=/var/run/secrets/tokens/konnectivity-agent-token
-        - --proxy-server-host=51.250.41.128
+        - --proxy-server-host=51.250.43.13 
         - --proxy-server-port=8132
         - --admin-server-port=8133
         - --health-server-port=8134
