--- a/charts/addons/charts/metric-server/client/CR.yaml
+++ b/charts/addons/charts/metric-server/client/CR.yaml
@@ -16,13 +16,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: metrics-server
-  namespace: kube-system
+  namespace: terra-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: metrics-server-auth-reader
-  namespace: kube-system
+  namespace: terra-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
