--- a/charts/addons/charts/prometheus-adapter/client/custom-metrics-apiserver-auth-reader-role-binding.yaml
+++ b/charts/addons/charts/prometheus-adapter/client/custom-metrics-apiserver-auth-reader-role-binding.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: custom-metrics-auth-reader
-  namespace: kube-system
+  namespace: terra-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
