--- a/charts/addons/charts/prometheus-adapter/client/hpa-custom-metrics-cluster-role-binding.yaml
+++ b/charts/addons/charts/prometheus-adapter/client/hpa-custom-metrics-cluster-role-binding.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: hpa-controller-custom-metrics
+  namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
