--- a/charts/kubeadm/templates/kubeadm.cfg.yaml
+++ b/charts/kubeadm/templates/kubeadm.cfg.yaml
@@ -1,4 +1,8 @@
 # Source: kubernetes/templates/kubeadm-config.yaml
+{{- $currentNamespace   := .Release.Namespace -}}
+{{- $serviceApiServerLb := (lookup "v1" "Service" $currentNamespace "kube-apiserver-svc") }}
+{{- $serviceApiServerIP := $serviceApiServerLb.status.loadBalancer.ingress }}
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -7,7 +11,7 @@ data:
   kubeadmcfg.yaml: |+
     apiVersion: kubeadm.k8s.io/v1beta2
     kind: ClusterConfiguration
-    controlPlaneEndpoint: 51.250.105.203
+    controlPlaneEndpoint: {{ (first $serviceApiServerIP ).ip }}
     networking:
       serviceSubnet: "31.66.0.0/16"
     ---
