--- a/charts/addons/charts/victoriaMetrics/client/certs.yaml
+++ b/charts/addons/charts/victoriaMetrics/client/certs.yaml
@@ -68,11 +68,11 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "pki-vmagent-client"
+  name: "pki-vm-agent-client"
   namespace: terra-system
 spec:
   commonName: "system:custom:vmagent-client"
-  secretName: "pki-vmagent-client"
+  secretName: "pki-vm-agent-client"
   duration: 8760h # 365d
   renewBefore: 4380h # 178d
   subject:
