--- a/charts/main/templates/service-kube-api-proxy.yaml
+++ b/charts/main/templates/service-kube-api-proxy.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.applications.apiProxy.enable }}
 ---
 apiVersion: v1
 kind: Service
@@ -12,3 +13,4 @@ spec:
     name: client
   selector:
     app: nginx
+{{- end }}
